--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "start": "node index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.1",
@@ -16,7 +15,5 @@
     "mongoose": "^6.1.5",
     "socket.io": "^4.4.1"
   },
-  "devDependencies": {
-    "parcel": "^2.2.1"
-  }
+  "devDependencies": {}
 }
